Serve the static javascript file for bootstrap form validation

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -29,24 +29,6 @@
 
     <!-- for bootstrap's form validation -->
     <!-- https://getbootstrap.com/docs/5.3/forms/validation/ -->
-    <script>
-      (() => {
-        "use strict";
-        const forms = document.querySelectorAll(".validated-form");
-        Array.from(forms).forEach((form) => {
-          form.addEventListener(
-            "submit",
-            (event) => {
-              if (!form.checkValidity()) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
-              form.classList.add("was-validated");
-            },
-            false
-          );
-        });
-      })();
-    </script>
+    <script src="/javascripts/validateForms.js"></script>
   </body>
 </html>
