--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,14 @@
   <div class="col-6 offset-3">
     <!-- novalidate is for cancelling browser's default validation and let bootstrap to take over validation -->
     <!-- class="validated-form" is for the bootstrap's script in boilerplate.ejs to select this form -->
-    <form action="/campgrounds" method="POST" novalidate class="validated-form">
+    <!-- enctype="multipart/form-data" tells the browser to encode data not only text data but also binary data, so that we can upload files-->
+    <form
+      action="/campgrounds"
+      method="POST"
+      novalidate
+      class="validated-form"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
         <!-- it stores what's in the input box inside campground[title] -->
@@ -26,7 +33,8 @@
           required
         />
       </div>
-      <div class="mb-3">
+      <input type="file" name="image" id="" multiple />
+      <!-- <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input
           class="form-control"
@@ -35,7 +43,7 @@
           name="campground[image]"
           required
         />
-      </div>
+      </div> -->
       <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
