Style image upload input

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -15,10 +15,6 @@
         <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required />
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Add Images</label>
-        <input type="file" name="image" , id="image" multiple>
-      </div>
-      <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
@@ -29,6 +25,10 @@
         <label class="form-label" for="description">Description</label>
         <textarea class="form-control" type="text" id="description" name="campground[description]" required>
 <%= campground.description %></textarea>
+      </div>
+      <div class="mb-3">
+        <label for="formFileMultiple" class="form-label">Add More Images</label>
+        <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
       </div>
       <div class="mb-3">
         <button class="btn btn-info">Update Campground</button>
