--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -27,7 +27,7 @@
 <%= campground.description %></textarea>
       </div>
       <div class="mb-3">
-        <label for="formFileMultiple" class="form-label">Add More Images</label>
+        <label for="formFileMultiple" class="form-label">Add Images</label>
         <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
       </div>
       <div class="mb-3">
