--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate') %>
+
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
@@ -55,3 +56,7 @@
     <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
   </div>
 </div>
+
+<!-- for bootstrap's form validation -->
+<!-- https://getbootstrap.com/docs/5.3/forms/validation/ -->
+<script src="/javascripts/validateForms.js"></script>
