--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,58 +1,62 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-  <h1 class="text-center">Edit Campground</h1>
-  <div class="col-6 offset-3">
-    <!-- novalidate is for cancelling browser's default validation and let bootstrap to take over validation -->
-    <!-- class="validated-form" is for the bootstrap's script in boilerplate.ejs to select this form -->
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
-      <div class="mb-3">
-        <label class="form-label" for="title">Title</label>
-        <!-- it stores what's in the input box inside campground[title] -->
-        <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="location">Location</label>
-        <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required />
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="price">Campground Price</label>
-        <div class="input-group">
-          <span class="input-group-text" id="price-label">$</span>
-          <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required />
-        </div>
-      </div>
-      <div class="mb-3">
-        <label class="form-label" for="description">Description</label>
-        <textarea class="form-control" type="text" id="description" name="campground[description]" required>
-<%= campground.description %></textarea>
-      </div>
-      <div class="mb-3">
-        <label for="formFileMultiple" class="form-label">Add Images</label>
-        <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
-      </div>
-      <div class="mb-3">
-        <% if (campground.images.length !== 0) {%>
-        <label for="" class="form-label">Delete Images</label>
-        <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
-          <% campground.images.forEach((img, i) => {%>
-          <div class="col">
-            <div class="card">
-              <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
-              <div class="card-img-overlay text-end pt-1 pe-2">
-                <label class="visually-hidden" for="image-<%= i %>">Delete Image</label>
-                <input class="form-check-input" type="checkbox" name="deleteImages[]" value="<%= img.filename %>" id="image-<%= i %>">
-              </div>
+  <h1 class="text-center mb-3">Edit Campground</h1>
+  <div class="col-md-6 offset-md-3">
+    <div class="card shadow">
+      <div class="card-body">
+        <!-- novalidate is for cancelling browser's default validation and let bootstrap to take over validation -->
+        <!-- class="validated-form" is for the bootstrap's script in boilerplate.ejs to select this form -->
+        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
+          <div class="mb-3">
+            <label class="form-label" for="title">Title</label>
+            <!-- it stores what's in the input box inside campground[title] -->
+            <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="location">Location</label>
+            <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="price">Campground Price</label>
+            <div class="input-group">
+              <span class="input-group-text" id="price-label">$</span>
+              <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required />
             </div>
           </div>
-          <% }) %>
-        </div>
-        <% } %>
+          <div class="mb-3">
+            <label class="form-label" for="description">Description</label>
+            <textarea class="form-control" type="text" id="description" name="campground[description]" required>
+<%= campground.description %></textarea>
+          </div>
+          <div class="mb-3">
+            <label for="formFileMultiple" class="form-label">Add Images</label>
+            <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
+          </div>
+          <div class="mb-3">
+            <% if (campground.images.length !== 0) {%>
+            <label for="" class="form-label">Delete Images</label>
+            <div class="row row-cols-1 row-cols-md-4 g-4 mb-3">
+              <% campground.images.forEach((img, i) => {%>
+              <div class="col">
+                <div class="card">
+                  <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                  <div class="card-img-overlay text-end pt-1 pe-2">
+                    <label class="visually-hidden" for="image-<%= i %>">Delete Image</label>
+                    <input class="form-check-input" type="checkbox" name="deleteImages[]" value="<%= img.filename %>" id="image-<%= i %>">
+                  </div>
+                </div>
+              </div>
+              <% }) %>
+            </div>
+            <% } %>
+          </div>
+          <div class="mb-3">
+            <button class="btn btn-info">Update Campground</button>
+          </div>
+        </form>
       </div>
-      <div class="mb-3">
-        <button class="btn btn-info">Update Campground</button>
-      </div>
-    </form>
+    </div>
     <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
   </div>
 </div>
