--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -11,6 +11,7 @@
   <!-- for mapbox gl -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="/stylesheets/app.css">
 
   <script id="search-js" defer src="https://api.mapbox.com/search-js/v1.0.0-beta.17/web.js">
   </script>
