--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -6,7 +6,7 @@
         <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80" alt="" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Sign Up</h5>
-          <form action="/register" method="POST" class="validated-form" novalidate>
+          <form action="/register" method="POST" class="validated-form single-submission-form" novalidate>
             <div class="mb-3">
               <label class="form-label" for="username">Username</label>
               <input class="form-control" type="text" id="username" name="username" autofocus required />
@@ -20,7 +20,7 @@
               <input class="form-control" type="password" id="password" name="password" required />
             </div>
             <div class="d-grid gap-2">
-              <button class="btn btn-success">Register</button>
+              <button class="btn btn-success single-submission-btn">Register</button>
             </div>
           </form>
         </div>
@@ -28,3 +28,6 @@
     </div>
   </div>
 </div>
+
+<!-- for single submission -->
+<script src="/javascripts/formSubmissionHandler.js"></script>
