--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -37,8 +37,8 @@
       <div class="card-body">
         <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit
         </a>
-        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-          <button class="btn btn-danger">Delete</button>
+        <form class="d-inline single-submission-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+          <button class="btn btn-danger single-submission-btn">Delete</button>
         </form>
       </div>
       <% } %>
@@ -51,7 +51,7 @@
     <div id='map'></div>
     <% if (currentUser) {%>
     <h2>Leave a Review</h2>
-    <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+    <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form single-submission-form" novalidate>
       <div class="mb-3">
         <fieldset class="starability-basic">
           <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
@@ -71,7 +71,7 @@
         <label class="form-label" for="body">Review Text</label>
         <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
       </div>
-      <button class="btn btn-success">Submit</button>
+      <button class="btn btn-success single-submission-btn">Submit</button>
     </form>
     <% } %> <% for(let review of campground.reviews) { %>
     <div class="card mb-3">
@@ -82,8 +82,8 @@
         </p>
         <p class="card-text">Review: <%= review.body %></p>
         <% if (currentUser && review.author.equals(currentUser._id)) {%>
-        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST">
-          <button class="btn btn-sm btn-danger">Delete</button>
+        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="single-submission-form">
+          <button class="btn btn-sm btn-danger single-submission-btn">Delete</button>
         </form>
         <% } %>
       </div>
@@ -98,3 +98,5 @@
 </script>
 
 <script src="/javascripts/showPageMap.js"></script>
+<!-- for single submission -->
+<script src="/javascripts/formSubmissionHandler.js"></script>
