--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <footer class="footer py-3 mt-auto">
   <div class="container">
-    <span class="text-muted">&copy; CampMark 2023</span>
+    <p class="text-muted">Enguang Shi</p>
+    <p class="text-muted">&copy; CampMark 2023</p>
   </div>
 </footer>
