Change CampMark to GemExplore

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer py-3 mt-auto">
   <div class="container">
     <p class="text-muted">Enguang Shi</p>
-    <p class="text-muted">&copy; CampMark 2023</p>
+    <p class="text-muted">&copy; GemExplore 2023</p>
   </div>
 </footer>
