--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,15 +1,15 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-  <h1 class="text-center mb-3">Edit Campground</h1>
+  <h1 class="text-center mb-3">Edit This Place</h1>
   <div class="col-md-6 offset-md-3">
     <div class="card shadow">
       <div class="card-body">
         <!-- novalidate is for cancelling browser's default validation and let bootstrap to take over validation -->
         <!-- class="validated-form" is for the bootstrap's script in boilerplate.ejs to select this form -->
-        <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form single-submission-form" enctype="multipart/form-data">
+        <form action="/all/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form single-submission-form" enctype="multipart/form-data">
           <div class="mb-3">
-            <label class="form-label" for="title">Title</label>
+            <label class="form-label" for="title">Name</label>
             <!-- it stores what's in the input box inside campground[title] -->
             <input class="form-control" type="text" id="title" name="campground[title]" value="<%= campground.title %>" required />
           </div>
@@ -18,7 +18,7 @@
             <input class="form-control" type="text" id="location" name="campground[location]" value="<%= campground.location %>" required />
           </div>
           <div class="mb-3">
-            <label class="form-label" for="price">Campground Price</label>
+            <label class="form-label" for="price">Price</label>
             <div class="input-group">
               <span class="input-group-text" id="price-label">$</span>
               <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required />
@@ -52,12 +52,12 @@
             <% } %>
           </div>
           <div class="mb-3">
-            <button class="btn btn-info single-submission-btn" id="singleSubmissionBtn">Update Campground</button>
+            <button class="btn btn-info single-submission-btn" id="singleSubmissionBtn">Update</button>
           </div>
         </form>
       </div>
     </div>
-    <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
+    <a href="/all/<%= campground._id %>">Back to All</a>
   </div>
 </div>
 
