--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div id="cluster-map"></div>
-<h1>All Campgrounds</h1>
-<div>
-  <a href="/campgrounds/new">Add Campground</a>
-</div>
+<h1>All Places</h1>
 <% for (let campground of campgrounds) {%>
 <div class="card mb-3">
   <div class="row">
@@ -17,7 +14,7 @@
         <p class="card-text">
           <small class="text-muted"><%= campground.location %></small>
         </p>
-        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">View <%= campground.title %></a>
+        <a class="btn btn-primary" href="/all/<%= campground._id %>">View <%= campground.title %></a>
       </div>
     </div>
   </div>
