--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,16 +1,16 @@
 <% layout('layouts/boilerplate') %>
 
 <div class="row">
-  <h1 class="text-center mb-3">New Campground</h1>
+  <h1 class="text-center mb-3">New Place</h1>
   <div class="col-md-6 offset-md-3">
     <div class="card shadow">
       <div class="card-body">
         <!-- novalidate is for cancelling browser's default validation and let bootstrap to take over validation -->
         <!-- class="validated-form" is for the bootstrap's script in boilerplate.ejs to select this form -->
         <!-- enctype="multipart/form-data" tells the browser to encode data not only text data but also binary data, so that we can upload files-->
-        <form action="/campgrounds" method="POST" novalidate class="validated-form single-submission-form" enctype="multipart/form-data">
+        <form action="/all" method="POST" novalidate class="validated-form single-submission-form" enctype="multipart/form-data">
           <div class="mb-3">
-            <label class="form-label" for="title">Title</label>
+            <label class="form-label" for="title">Name</label>
             <!-- it stores what's in the input box inside campground[title] -->
             <input class="form-control" type="text" id="title" name="campground[title]" required />
           </div>
@@ -19,7 +19,7 @@
             <input class="form-control" type="text" id="location" name="campground[location]" autocomplete="address-line1" required />
           </div>
           <div class="mb-3">
-            <label class="form-label" for="price">Campground Price</label>
+            <label class="form-label" for="price">Price</label>
             <div class="input-group">
               <span class="input-group-text" id="price-label">$</span>
               <input type="text" class="form-control" id="price" placeholder="0.00" aria-label="price" aria-describedby="price-label" name="campground[price]" required />
@@ -34,12 +34,12 @@
             <input class="form-control" type="file" name="image" id="formFileMultiple" multiple>
           </div>
           <div class="mb-3">
-            <button class="btn btn-success single-submission-btn">Add Campground</button>
+            <button class="btn btn-success single-submission-btn">Submit</button>
           </div>
         </form>
       </div>
     </div>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/all">Back to All</a>
   </div>
 </div>
 
