--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -31,19 +31,19 @@
         <li class="list-group-item">
           Submitted by <%= campground.author.username %>
         </li>
-        <li class="list-group-item">$<%= campground.price %>/night</li>
+        <li class="list-group-item">$<%= campground.price %></li>
       </ul>
       <% if (currentUser && campground.author.equals(currentUser._id)) {%>
       <div class="card-body">
-        <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit
+        <a class="card-link btn btn-info" href="/all/<%= campground._id %>/edit">Edit
         </a>
-        <form class="d-inline single-submission-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+        <form class="d-inline single-submission-form" action="/all/<%= campground._id %>?_method=DELETE" method="POST">
           <button class="btn btn-danger single-submission-btn">Delete</button>
         </form>
       </div>
       <% } %>
       <div class="card-footer text-muted">
-        <a href="/campgrounds">All Campgrounds</a>
+        <a href="/all">Back to All</a>
       </div>
     </div>
   </div>
@@ -51,7 +51,7 @@
     <div id='map'></div>
     <% if (currentUser) {%>
     <h2>Leave a Review</h2>
-    <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form single-submission-form" novalidate>
+    <form action="/all/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form single-submission-form" novalidate>
       <div class="mb-3">
         <fieldset class="starability-basic">
           <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
@@ -82,7 +82,7 @@
         </p>
         <p class="card-text">Review: <%= review.body %></p>
         <% if (currentUser && review.author.equals(currentUser._id)) {%>
-        <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="single-submission-form">
+        <form action="/all/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="POST" class="single-submission-form">
           <button class="btn btn-sm btn-danger single-submission-btn">Delete</button>
         </form>
         <% } %>
