--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CampMark</title>
+  <title>GemExplore</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/home.css">
 </head>
@@ -13,13 +13,13 @@
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
-        <h3 class="float-md-left mb-0">CampMark</h3>
+        <h3 class="float-md-left mb-0">GemExplore</h3>
         <nav class="nav nav-masthead justify-content-center float-md-right">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="/campgrounds">Campgrounds</a>
+          <a class="nav-link" href="/all">All Places</a>
           <% if(!currentUser) { %>
           <a class="nav-link" href="/login">Login</a>
-          <a class="nav-link" href="/register">Register</a>
+          <a class="nav-link" href="/register">Sign Up</a>
           <% } else { %>
           <a class="nav-link" href="/logout">Logout</a>
           <% } %>
@@ -27,16 +27,15 @@
       </div>
     </header>
     <main class="px-3">
-      <h1>CampMark</h1>
-      <p class="lead"> Welcome to CampMark! <br> Jump right in and explore our many campgrounds. <br>
-        Feel free to share some of your own and comment on others!</p>
-      <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View
-        Campgrounds</a>
+      <h1>GemExplore</h1>
+      <p class="lead"> Welcome to GemExplore! <br> Embark on a journey to uncover hidden gems around the city. <br>
+        Discover secret spots and add your own discoveries for others to enjoy!</p>
+      <a href="/all" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">View All Places</a>
     </main>
 
     <footer class="mt-auto text-white-50">
       <p>Enguang Shi</p>
-      <p>&copy; 2023 CampMark</p>
+      <p>&copy; 2023 GemExplore</p>
     </footer>
 
 
