--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-6 offset-md-3 col-xl-4 offset-xl-4">
       <div class="card shadow">
-        <img src="https://images.unsplash.com/photo-1571863533956-01c88e79957e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1267&q=80" alt="" class="card-img-top" />
+        <img src="https://images.unsplash.com/photo-1682685796444-acc2f5c1b7b6?auto=format&fit=crop&q=80&w=2970&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="card-img-top" />
         <div class="card-body">
           <h5 class="card-title">Sign Up</h5>
           <form action="/register" method="POST" class="validated-form single-submission-form" novalidate>
