Fix a bug where editing a place's location doesn't change the map

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -57,7 +57,7 @@
         </form>
       </div>
     </div>
-    <a href="/all/<%= campground._id %>">Back to All</a>
+    <a href="/all/<%= campground._id %>">Back</a>
   </div>
 </div>
 
