--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>Enguang Shi</p>
+      <p>Created by Enguang Shi</p>
       <p>&copy; 2023 GemExplore</p>
     </footer>
 
