--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer py-3 mt-auto">
   <div class="container">
-    <p class="text-muted">Enguang Shi</p>
-    <p class="text-muted">&copy; GemExplore 2023</p>
+    <span class="text-muted">Created by Enguang Shi</span>
+    <span class="text-muted">&copy; 2023 GemExplore</span>
   </div>
 </footer>
